# HandyVideo

./: CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: issueテンプレート.md
src/: main.c  videoInput.c  videoInput.h
